WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164211
[CSS Parser] Miscellaneous bug fixes
https://bugs.webkit.org/show_bug.cgi?id=164211
Summary
[CSS Parser] Miscellaneous bug fixes
Dave Hyatt
Reported
2016-10-30 16:54:03 PDT
[CSS Parser] Miscellaneous bug fixes
Attachments
Patch
(4.54 KB, patch)
2016-10-30 16:57 PDT
,
Dave Hyatt
darin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(
deleted
)
2016-10-30 18:18 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-10-30 16:57:27 PDT
Created
attachment 293372
[details]
Patch
Darin Adler
Comment 2
2016-10-30 17:59:22 PDT
Comment on
attachment 293372
[details]
Patch Strange to see all these patches for bug fixes, but no test cases. I assume that these fixes are needed to pass existing WebKit tests with the new parse?
Build Bot
Comment 3
2016-10-30 18:18:19 PDT
Comment on
attachment 293372
[details]
Patch
Attachment 293372
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2407920
New failing tests: canvas/philip/tests/2d.canvas.reference.html
Build Bot
Comment 4
2016-10-30 18:18:22 PDT
Created
attachment 293379
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Dave Hyatt
Comment 5
2016-10-31 08:03:14 PDT
(In reply to
comment #2
)
> Comment on
attachment 293372
[details]
> Patch > > Strange to see all these patches for bug fixes, but no test cases. I assume > that these fixes are needed to pass existing WebKit tests with the new parse?
Yeah, all these fixes are about getting the new parser to pass our existing tests.
Dave Hyatt
Comment 6
2016-10-31 08:04:22 PDT
Fixed in
r208142
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug